--- a/package.json
+++ b/package.json
@@ -13,12 +13,23 @@
     "@angular/platform-browser": "~17.0.0",
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
+    "@nestjs-modules/mailer": "^1.9.1",
+    "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@ngrx/component-store": "^17.0.1",
+    "@ngrx/effects": "^17.0.1",
+    "@ngrx/store": "^17.0.1",
     "@nx/angular": "17.1.3",
+    "@prisma/client": "^5.7.0",
+    "aws-sdk": "^2.1515.0",
     "axios": "^1.0.0",
+    "bcrypt": "^5.1.1",
     "chart.js": "^4.4.1",
+    "class-validator": "^0.14.0",
+    "otplib": "^12.0.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^17.0.0",
@@ -69,12 +80,16 @@
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "17.1.3",
+    "nx": "17.1.1",
     "prettier": "^2.6.2",
+    "prisma": "^5.7.0",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2",
     "url-loader": "^4.1.1"
+  },
+  "nx": {
+    "targets": {}
   }
 }
