--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/swagger": "^7.3.1",
     "@ngrx/component-store": "^17.0.1",
     "@ngrx/effects": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@nx/angular": "17.1.3",
     "@prisma/client": "^5.7.0",
-    "aws-sdk": "^2.1515.0",
+    "aws-sdk": "^2.1603.0",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "otplib": "^12.0.1",
     "primeflex": "^3.3.1",
