--- a/apps/client-portal/project.json
+++ b/apps/client-portal/project.json
@@ -8,19 +8,25 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:application",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/client-portal",
         "index": "apps/client-portal/src/index.html",
         "browser": "apps/client-portal/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "apps/client-portal/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
           "apps/client-portal/src/favicon.ico",
           "apps/client-portal/src/assets"
         ],
-        "styles": ["apps/client-portal/src/styles.scss"],
+        "styles": [
+          "apps/client-portal/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -57,7 +63,11 @@
           "buildTarget": "client-portal:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "port": 4500,
+        "proxyConfig": "apps/client-portal/proxy.conf.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
@@ -67,7 +77,9 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
         "lintFilePatterns": [
           "apps/client-portal/**/*.ts",
@@ -77,7 +89,9 @@
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "apps/client-portal/jest.config.ts"
       }
