--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular/animations": "~17.0.0",
-    "@angular/common": "~17.0.0",
-    "@angular/compiler": "~17.0.0",
-    "@angular/core": "~17.0.0",
-    "@angular/forms": "~17.0.0",
-    "@angular/platform-browser": "~17.0.0",
-    "@angular/platform-browser-dynamic": "~17.0.0",
-    "@angular/router": "~17.0.0",
+    "@angular/animations": "18.0.0",
+    "@angular/common": "18.0.0",
+    "@angular/compiler": "18.0.0",
+    "@angular/core": "18.0.0",
+    "@angular/forms": "18.0.0",
+    "@angular/platform-browser": "18.0.0",
+    "@angular/platform-browser-dynamic": "18.0.0",
+    "@angular/router": "18.0.0",
     "@nestjs-modules/mailer": "^1.9.1",
     "@nestjs/axios": "^3.0.1",
     "@nestjs/common": "^10.0.2",
@@ -20,13 +20,13 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/swagger": "^7.3.1",
-    "@ngrx/component-store": "^17.0.1",
-    "@ngrx/effects": "^17.0.1",
-    "@ngrx/store": "^17.0.1",
-    "@nx/angular": "17.1.3",
+    "@ngrx/component-store": "17.0.1",
+    "@ngrx/effects": "17.0.1",
+    "@ngrx/store": "17.0.1",
+    "@nx/angular": "19.1.0",
     "@prisma/client": "^5.7.0",
     "aws-sdk": "^2.1603.0",
-    "axios": "^1.0.0",
+    "axios": "1.6.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.1",
     "class-transformer": "^0.5.1",
@@ -39,56 +39,56 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.0"
+    "zone.js": "0.14.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~17.0.0",
-    "@angular-devkit/core": "~17.0.0",
-    "@angular-devkit/schematics": "~17.0.0",
-    "@angular-eslint/eslint-plugin": "~17.0.0",
-    "@angular-eslint/eslint-plugin-template": "~17.0.0",
-    "@angular-eslint/template-parser": "~17.0.0",
+    "@angular-devkit/build-angular": "18.0.1",
+    "@angular-devkit/core": "18.0.1",
+    "@angular-devkit/schematics": "18.0.1",
+    "@angular-eslint/eslint-plugin": "17.3.0",
+    "@angular-eslint/eslint-plugin-template": "17.3.0",
+    "@angular-eslint/template-parser": "17.3.0",
     "@angular/cli": "~17.0.0",
-    "@angular/compiler-cli": "~17.0.0",
-    "@angular/language-service": "~17.0.0",
+    "@angular/compiler-cli": "18.0.0",
+    "@angular/language-service": "18.0.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
-    "@nrwl/nest": "^17.2.0",
-    "@nx/cypress": "17.1.3",
-    "@nx/eslint": "17.1.3",
-    "@nx/eslint-plugin": "17.1.3",
-    "@nx/jest": "17.2.0",
-    "@nx/js": "17.2.0",
-    "@nx/nest": "17.2.0",
-    "@nx/node": "17.2.0",
-    "@nx/web": "17.1.3",
-    "@nx/webpack": "17.2.0",
-    "@nx/workspace": "17.1.3",
+    "@nrwl/nest": "19.1.0",
+    "@nx/cypress": "19.1.0",
+    "@nx/eslint": "19.1.0",
+    "@nx/eslint-plugin": "19.1.0",
+    "@nx/jest": "19.1.0",
+    "@nx/js": "19.1.0",
+    "@nx/nest": "19.1.0",
+    "@nx/node": "19.1.0",
+    "@nx/web": "19.1.0",
+    "@nx/webpack": "19.1.0",
+    "@nx/workspace": "19.1.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
-    "@schematics/angular": "~17.0.0",
+    "@schematics/angular": "18.0.1",
     "@svgr/webpack": "^8.0.1",
-    "@swc-node/register": "~1.6.7",
+    "@swc-node/register": "1.8.0",
     "@swc/core": "~1.3.85",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "cypress": "^13.0.0",
-    "eslint": "~8.46.0",
+    "@typescript-eslint/eslint-plugin": "7.3.0",
+    "@typescript-eslint/parser": "7.3.0",
+    "cypress": "13.8.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "jest-preset-angular": "~13.1.4",
+    "jest-preset-angular": "14.1.0",
     "jsonc-eslint-parser": "^2.1.0",
-    "nx": "17.1.1",
+    "nx": "19.1.0",
     "prettier": "^2.6.2",
     "prisma": "^5.7.0",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.2.2",
+    "typescript": "5.4.5",
     "url-loader": "^4.1.1"
   },
   "nx": {
